--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -16,20 +16,20 @@
       <option name="PHP Statement" value="true" />
     </context>
   </template>
-  <template name="sterveling" value="var_dump($VAR$); die($END$);" toReformat="false" toShortenFQNames="true">
+  <template name="sterveling" value="var_dump($VAR$); die($END$);" description="" toReformat="false" toShortenFQNames="true">
     <variable name="VAR" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="PHP" value="true" />
     </context>
   </template>
-  <template name="vangling" value="try {&#10;    $END$&#10;} catch($VAR$ $e) {&#10;    $VAR2$&#10;}" toReformat="false" toShortenFQNames="true">
+  <template name="vangling" value="try {&#10;    $END$&#10;} catch($VAR$ $e) {&#10;    $VAR2$&#10;}" description="" toReformat="false" toShortenFQNames="true">
     <variable name="VAR" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAR2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="PHP" value="true" />
     </context>
   </template>
-  <template name="kees" value="switch($VAR$) {&#10;    case $VAR2$:&#10;        break;&#10;    default:&#10;        $END$&#10;        break;&#10;}" toReformat="false" toShortenFQNames="true">
+  <template name="kees" value="switch($VAR$) {&#10;    case $VAR2$:&#10;        break;&#10;    default:&#10;        $END$&#10;        break;&#10;}" description="" toReformat="false" toShortenFQNames="true">
     <variable name="VAR" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAR2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
