PS-2019.1.2 <ronan@MBP-van-Ronan.local Update PHP.xml

--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -36,4 +36,10 @@
       <option name="PHP" value="true" />
     </context>
   </template>
+  <template name="test" value="public function test$VAR$()&#10;{&#10;    $END$&#10;}" toReformat="false" toShortenFQNames="true">
+    <variable name="VAR" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
 </templateSet>
